--- a/force-app/main/default/classes/MyClassTest.cls
+++ b/force-app/main/default/classes/MyClassTest.cls
@@ -1,8 +1,22 @@
 @isTest
 public with sharing class MyClassTest {
     
-    @isTest
-    public void testMethod1() {
-        MyClass mc = new MyClass();
+    @isTest static void testWarmTemp() {
+        Decimal celsius = MyClass.FahrenheitToCelsius(70);
+        System.assertEquals(21.11,celsius);
+    }
+    
+    @isTest static void testFreezingPoint() {
+        Decimal celsius = MyClass.FahrenheitToCelsius(32);
+        System.assertEquals(0,celsius);
+    }
+    @isTest static void testBoilingPoint() {
+        Decimal celsius = MyClass.FahrenheitToCelsius(212);        
+        System.assertEquals(100,celsius,'Boiling point temperature is not expected.');
+    } 
+    
+    @isTest static void testNegativeTemp() {
+        Decimal celsius = MyClass.FahrenheitToCelsius(-10);
+        System.assertEquals(-23.33,celsius);
     }
 }
